--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -5,11 +5,32 @@ body {
 img {
   width: 100px;
   height: 100px;
+  align-self: center;
 }
 
 .title {
   font-size: 36px;
   font-weight: 900;
+  display: flex;
+  justify-content: center;
+  padding-bottom: 32px;
+}
+
+.container {
+  display: flex;
+  justify-content: center;
+  gap: 52px;
+}
+
+.text {
+  width: 200px;
+  text-align:center;
+}
+
+.container-info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 /* do not edit this footer */
